// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AppX 1`] = `
Object {
  "win": Array [
    Object {
      "arch": "x64",
      "file": "Test App ßW 1.1.0.appx",
      "safeArtifactName": "TestApp-1.1.0.appx",
    },
  ],
}
`;

exports[`auto launch 1`] = `
Object {
  "win": Array [
    Object {
      "arch": "x64",
      "file": "Test App ßW 1.1.0.appx",
      "safeArtifactName": "TestApp-1.1.0.appx",
    },
  ],
}
`;

exports[`certificateSubjectName 1`] = `
Object {
  "win": Array [
    Object {
      "arch": "x64",
      "file": "Test App ßW-1.1.0.appx",
      "safeArtifactName": "TestApp-1.1.0.appx",
    },
  ],
}
`;

exports[`languages and not signed (windows store only) 1`] = `
Object {
  "win": Array [
    Object {
      "arch": "ia32",
      "file": "Test App ßW 1.1.0 ia32.appx",
      "safeArtifactName": "TestApp-1.1.0.appx",
    },
    Object {
      "arch": "x64",
      "file": "Test App ßW 1.1.0.appx",
      "safeArtifactName": "TestApp-1.1.0.appx",
    },
  ],
}
`;
